--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ NODE_ENV='production'
 BASE_URL=null
 LMS_BASE_URL=null
 STUDIO_BASE_URL=null
-DISCOVERY_API_BASE_URL=null
+DISCOVERY_API_BASE_URL='http://discovery.om.shivajifoundation.co.in'
 LOGO_URL=null
 LOGIN_URL=null
 LOGOUT_URL=null
